[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Retangulo.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Fonts/TravelingTypewriter.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Fonts/Typewriter.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/Recebimento.gd" type="Script" id=5]
[ext_resource path="res://scenes/Relogio.gd" type="Script" id=6]
[ext_resource path="res://scenes/Painel.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Base.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Codificador.gd" type="Script" id=9]
[ext_resource path="res://scenes/Pedido.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/FadeIn.gd" type="Script" id=11]
[ext_resource path="res://scenes/Pedidos.gd" type="Script" id=12]
[ext_resource path="res://scenes/Timeline.gd" type="Script" id=13]
[ext_resource path="res://scenes/Personagens/Shelberg.gd" type="Script" id=14]
[ext_resource path="res://scenes/Personagens/Weinstein.gd" type="Script" id=15]
[ext_resource path="res://scenes/Personagens/Hop.gd" type="Script" id=16]
[ext_resource path="res://scenes/Personagens/Laurson.gd" type="Script" id=17]
[ext_resource path="res://scenes/Personagens/Mish.gd" type="Script" id=18]
[ext_resource path="res://scenes/Personagens/Bardon.gd" type="Script" id=19]

[sub_resource type="DynamicFont" id=1]
size = 60
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
use_filter = true
font_data = ExtResource( 3 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="NovaMensagem" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Turno" type="Timer" parent="."]
wait_time = 180.0
autostart = true

[node name="Codificador" type="Node" parent="."]
script = ExtResource( 9 )

[node name="Timeline" type="Node" parent="."]
script = ExtResource( 13 )

[node name="Personagens" type="Node" parent="."]

[node name="Hop" type="Node" parent="Personagens"]
script = ExtResource( 16 )
nome = "Hop"
criptografia = "cesar3"

[node name="Weinstein" type="Node" parent="Personagens"]
script = ExtResource( 15 )
nome = "Weinstein, Toulann"
criptografia = "polybius"

[node name="Shelberg" type="Node" parent="Personagens"]
script = ExtResource( 14 )
nome = "Shelberg, Arnheim"
criptografia = "reverso"

[node name="Mish" type="Node" parent="Personagens"]
script = ExtResource( 18 )
nome = "Mish, Kleinhorst"
criptografia = "cesar7"

[node name="Bardon" type="Node" parent="Personagens"]
script = ExtResource( 19 )
nome = "Bardon, Flarsink"
criptografia = "atbash"

[node name="Laurson" type="Node" parent="Personagens"]
script = ExtResource( 17 )
nome = "Laurson"
criptografia = "morse"

[node name="Fundo" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.75809
margin_bottom = 1.75806
color = Color( 0.643137, 0.560784, 0.45098, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Recebimento" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Pedidos" parent="Recebimento" instance=ExtResource( 2 )]
margin_left = -464.0
margin_top = -280.0
margin_right = -120.0
margin_bottom = 278.0
color = Color( 0.541176, 0.435294, 0.337255, 1 )

[node name="PedidosManager" type="Control" parent="Recebimento/Pedidos"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 12 )
pedido = ExtResource( 10 )

[node name="Legenda" parent="Recebimento" instance=ExtResource( 2 )]
margin_left = -464.0
margin_top = 238.0
margin_right = -120.0
margin_bottom = 278.0
color = Color( 0.988235, 0.909804, 0.772549, 1 )

[node name="Label" type="Label" parent="Recebimento/Legenda"]
margin_left = 9.09747
margin_top = -0.507568
margin_right = 334.097
margin_bottom = 38.4924
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mensagens recebidas"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mensagem" parent="Recebimento" instance=ExtResource( 2 )]
margin_left = -96.0
margin_top = -281.0
margin_right = 460.0
margin_bottom = -71.0
color = Color( 0.988235, 0.909804, 0.772549, 1 )

[node name="Label" type="Label" parent="Recebimento/Mensagem"]
margin_left = 13.0
margin_top = 11.0
margin_right = 536.0
margin_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TabelaCifra" parent="Recebimento" instance=ExtResource( 2 )]
margin_left = -96.0
margin_top = -79.0
margin_right = 460.0
margin_bottom = 137.0
color = Color( 0.988235, 0.909804, 0.772549, 1 )

[node name="Label" type="Label" parent="Recebimento/TabelaCifra"]
margin_left = 13.0
margin_top = 5.0
margin_right = 539.0
margin_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A->X  B->Y  C->Z  D->A  E->B  
F->C  G->D  H->E  I->F  J->G  
K->H  L->I  M->J  N->K  O->L  
P->M  Q->N  R->O  S->P  T->Q  
U->R  V->S  W->T  X->U  Y->V  Z->W"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LeftCifra" type="Button" parent="Recebimento"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.7387
margin_top = 156.099
margin_right = -6.73871
margin_bottom = 203.099
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Recebimento/LeftCifra"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.6228
margin_top = -40.8594
margin_right = 39.1614
margin_bottom = 36.1406
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.541176, 0.545098, 0.564706, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "<"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Cifra" parent="Recebimento" instance=ExtResource( 2 )]
margin_left = 10.2
margin_top = 153.158
margin_right = 355.2
margin_bottom = 206.158
color = Color( 0.988235, 0.909804, 0.772549, 1 )

[node name="Label" type="Label" parent="Recebimento/Cifra"]
anchor_left = 0.456835
anchor_top = 0.386792
anchor_right = 0.543165
anchor_bottom = 0.613208
margin_left = -22.8017
margin_top = -10.5
margin_right = 24.1983
margin_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CESAR"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RightCifra" type="Button" parent="Recebimento"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 371.954
margin_top = 156.0
margin_right = 443.954
margin_bottom = 203.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Recebimento/RightCifra"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.6228
margin_top = -40.8594
margin_right = 39.1614
margin_bottom = 36.1406
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.541176, 0.545098, 0.564706, 1 )
text = ">"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Envio" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Bases" parent="Envio" instance=ExtResource( 2 )]
margin_left = -464.0
margin_top = -280.0
margin_right = -120.0
margin_bottom = 37.0
color = Color( 0.541176, 0.435294, 0.337255, 1 )

[node name="Weinstein" parent="Envio/Bases" instance=ExtResource( 8 )]
nome = "Weinstein"
local = "Toulann"

[node name="Shelberg" parent="Envio/Bases" instance=ExtResource( 8 )]
margin_top = 81.8621
margin_bottom = 128.862
nome = "Shelberg"
local = "Arnheim"

[node name="Mish" parent="Envio/Bases" instance=ExtResource( 8 )]
margin_left = 8.81451
margin_top = 150.675
margin_right = 332.815
margin_bottom = 197.675
nome = "Mish"
local = "Kleinhorst"

[node name="Bardon" parent="Envio/Bases" instance=ExtResource( 8 )]
margin_left = 8.81451
margin_top = 220.328
margin_right = 332.815
margin_bottom = 267.328
nome = "Bardon"
local = "Flarsink"

[node name="Legenda" parent="Envio/Bases" instance=ExtResource( 2 )]
margin_left = -172.181
margin_top = 119.626
margin_right = 171.819
margin_bottom = 159.626
color = Color( 0.988235, 0.909804, 0.772549, 1 )

[node name="Label" type="Label" parent="Envio/Bases/Legenda"]
margin_left = 9.09747
margin_top = -0.507568
margin_right = 334.097
margin_bottom = 38.4924
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Bases militares"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Estoque" parent="Envio" instance=ExtResource( 2 )]
margin_left = -464.0
margin_top = 50.0
margin_right = -120.0
margin_bottom = 276.0
color = Color( 0.988235, 0.909804, 0.772549, 1 )

[node name="Label" type="Label" parent="Envio/Estoque"]
margin_left = 14.0
margin_top = 11.0993
margin_right = 339.0
margin_bottom = 216.099
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ESTOQUE
20x Rações
30x Destacamentos
"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Painel" parent="Envio" instance=ExtResource( 2 )]
margin_left = -94.0
margin_top = -281.0
margin_right = 459.0
margin_bottom = 203.0
color = Color( 0.988235, 0.909804, 0.772549, 1 )

[node name="PainelTexto" parent="Envio/Painel" instance=ExtResource( 7 )]

[node name="Troca" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.3676
margin_top = 222.877
margin_right = 97.6324
margin_bottom = 269.877
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Troca"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.6228
margin_top = -40.8594
margin_right = 39.1614
margin_bottom = 36.1406
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.541176, 0.545098, 0.564706, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "ENVIO"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Relogio" parent="." instance=ExtResource( 2 )]
margin_left = 110.0
margin_top = 220.263
margin_right = 248.0
margin_bottom = 273.263
color = Color( 0.988235, 0.909804, 0.772549, 1 )
script = ExtResource( 6 )

[node name="Label" type="Label" parent="Relogio"]
anchor_left = 0.456835
anchor_top = 0.386792
anchor_right = 0.543165
anchor_bottom = 0.613208
margin_left = -30.423
margin_top = -15.9401
margin_right = 56.6635
margin_bottom = 15.0599
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "15:03"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 262.964
margin_top = 222.0
margin_right = 443.964
margin_bottom = 269.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.6228
margin_top = -40.8594
margin_right = 39.1614
margin_bottom = 36.1406
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.541176, 0.545098, 0.564706, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "MENU"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="FadeIn" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Semana" type="Label" parent="FadeIn"]
margin_left = 349.718
margin_top = 197.482
margin_right = 674.718
margin_bottom = 261.482
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "Semana 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="NovaMensagem" to="." method="_on_NovaMensagem_timeout"]
[connection signal="timeout" from="Turno" to="." method="_on_Turno_timeout"]
[connection signal="enviar_pedido" from="Personagens/Hop" to="." method="novo_pedido"]
[connection signal="enviar_pedido" from="Personagens/Weinstein" to="." method="novo_pedido"]
[connection signal="enviar_pedido" from="Personagens/Shelberg" to="." method="novo_pedido"]
[connection signal="enviar_pedido" from="Personagens/Mish" to="." method="novo_pedido"]
[connection signal="enviar_pedido" from="Personagens/Bardon" to="." method="novo_pedido"]
[connection signal="enviar_pedido" from="Personagens/Laurson" to="." method="novo_pedido"]
[connection signal="pedido_acessado" from="Recebimento/Pedidos/PedidosManager" to="." method="pedido_acessado"]
[connection signal="button_up" from="Recebimento/LeftCifra" to="Recebimento" method="_on_LeftCifra_button_up"]
[connection signal="button_up" from="Recebimento/RightCifra" to="Recebimento" method="_on_RightCifra_button_up"]
[connection signal="base_examined" from="Envio/Bases/Weinstein" to="." method="base_examined"]
[connection signal="base_examined" from="Envio/Bases/Shelberg" to="." method="base_examined"]
[connection signal="base_examined" from="Envio/Bases/Mish" to="." method="base_examined"]
[connection signal="base_examined" from="Envio/Bases/Bardon" to="." method="base_examined"]
[connection signal="envio" from="Envio/Painel/PainelTexto" to="." method="_on_PainelTexto_envio"]
[connection signal="button_up" from="Troca" to="." method="_on_Troca_button_up"]
